k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
  namespace: hivebox
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
